--- a/LeagueOfLegends/ChampionStoreWindow.xaml
+++ b/LeagueOfLegends/ChampionStoreWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LeagueOfLegends"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="ChampionStoreWindow" Height="450" Width="800">
+        Title="ChampionStoreWindow" Height="620" Width="600" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <!--Animatie uitschiuven menu-->
         <Storyboard x:Key="KeyMenuOpen">
