--- a/LeagueOfLegends/SkinStoreWindow.xaml
+++ b/LeagueOfLegends/SkinStoreWindow.xaml
@@ -114,6 +114,7 @@
                     </ListView>
                 </StackPanel>
             </Grid>
+            
             <Grid DockPanel.Dock="Top" Height="60" VerticalAlignment="Top" Background="#FF26E409" Margin="0,0,5.6,0">
                 <TextBlock
                 Text="Skin Store" 
@@ -133,6 +134,8 @@
                     </materialDesign:PopupBox>
                 </StackPanel>
             </Grid>
+
+            <!--Code voor Product display-->
             <ScrollViewer Grid.Column="1" Grid.Row="2" Background="#FFF1F1F1">
                 <StackPanel>
                     <TextBlock
