--- a/LeagueOfLegends/MainWindow.xaml
+++ b/LeagueOfLegends/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LeagueOfLegends"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Home" Height="620" Width="600" WindowStartupLocation="CenterScreen">
+        Title="Home" Loaded="Window_Loaded" Height="620" Width="600" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <!--Animatie uitschiuven menu-->
         <Storyboard x:Key="KeyMenuOpen">
@@ -137,8 +137,9 @@
             </Grid>
 
             <!--Code Home menu (Witte block)-->
+            <!--TEST-->
             <Grid Background="White">
-                <!--ScrollViewer Background="White" Gaat ook-->
+                <!--Bij dataGrid is geen achtergrond nodig-->
             </Grid>
 
 
